fix: search bar container height on smaller screen

--- a/src/assets/stylesheets/customizations/_menu.scss
+++ b/src/assets/stylesheets/customizations/_menu.scss
@@ -201,9 +201,10 @@ label.md-icon.md-icon--menu.md-header-nav__button{
     .md-search__inner {
       top: 10px;
       left: 175px;
+      height: fit-content;
       opacity: 1;
       pointer-events: all;
-
+     
       .md-search__output {
         display: none;
       }
@@ -234,7 +235,6 @@ label.md-icon.md-icon--menu.md-header-nav__button{
       left: 100%;
       z-index: 2;
       width: calc(100% - 50px);
-      height: 100%;
       transform: translateX(50%);
       opacity: 1;
       transition: right 0ms 300ms, left 0ms 300ms, transform 150ms 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms 150ms;
